# window-bot

./: .gitignore  README.md  config.example.toml  deploy.sh  pyproject.toml
contrib/: window-bot.env.example  window-bot.service
src/window_bot/: __init__.py  cli.py  config.py  decision.py  notifier.py  service.py  state.py  weather.py
tests/: test_config.py  test_decision.py  test_notifier.py  test_service.py  test_state.py  test_weather.py
